# yt_editor

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  THIRD_PARTY_NOTICES.md  docker-compose.yml  package-lock.json  package.json
editor-backend/: .env.example  package.json  tsconfig.json
editor-backend/src/: server.ts
editor-backend/src/agent/: editingAgent.ts  otioSchema.ts  timelineValidator.ts
editor-backend/src/agent/__tests__/: editingAgent.test.ts  otioSchema.test.ts  timelineValidator.test.ts
editor-backend/src/middleware/: auth.ts  security.ts
editor-backend/src/persistence/: db.ts  jobStore.ts  retention.ts
editor-backend/src/persistence/__tests__/: jobStore.test.ts
editor-backend/src/types/: metadata.ts  styleProfile.ts
legal/: ACCEPTABLE_USE_POLICY.md  PRIVACY_POLICY.md  README.md  SUBPROCESSORS.md  TERMS_OF_SERVICE.md
rust-media-engine/: Cargo.toml  index.js  package.json
rust-media-engine/src/: audio.rs  device.rs  lib.rs  saliency.rs  scene.rs  smart_export.rs  types.rs  whisper.rs
web-editor-ui/: .env.example  index.html  package.json  vite.config.ts
web-editor-ui/src/: CandidateReview.tsx  EditorApp.tsx  OTIOSequence.tsx  PreviewEngine.tsx  RemotionTimeline.tsx  Root.tsx  UploadZone.tsx  ViralCaptions.tsx  WebCodecsRenderer.tsx  YoutuberDropdown.tsx  editor.css  main.tsx  otio.ts  styleData.ts  styleProfile.ts  vite-env.d.ts
web-editor-ui/src/auth/: AuthProvider.tsx
web-editor-ui/src/components/: ErrorBoundary.tsx
web-editor-ui/src/lib/: fetchWithRetry.ts
web-editor-ui/src/store/: editorStore.ts
