[package]
name = "rust-media-engine"
version = "0.4.0"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[features]
default = []
cuda = ["candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda"]
metal = ["candle-core/metal", "candle-nn/metal", "candle-transformers/metal"]

[dependencies]
napi = { version = "2.16.4", default-features = false, features = [
    "napi4",
    "napi6",
    "async",
    "serde-json",
] }
napi-derive = "2.16.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

# ── Whisper transcription via Hugging Face Candle ──
candle-core = "0.8"
candle-nn = "0.8"
candle-transformers = "0.8"
hf-hub = "0.4"
tokenizers = "0.20"

# ── Error handling ──
anyhow = "1"

# ── CNN saliency detection via ONNX Runtime ──
ort = { version = "2.0.0-rc.12", features = ["load-dynamic"] }

[build-dependencies]
napi-build = "2.0.1"
